--- a/rating.html
+++ b/rating.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Фильмы</title>
+    <title>Рейтинг фильмов</title>
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -61,9 +61,9 @@
               
               <ul class="nav nav-pills">
                 <li>  <a href="index.html">Главная</a> </li>
-                <li class="active"> <a href="films.html">Фильмы</a> </li>
+                <li> <a href="films.html">Фильмы</a> </li>
                 <li> <a href="#">Сериалы</a> </li>
-                <li> <a href="rating.html">Рейтинг фильмов</a> </li>
+                <li class="active"> <a href="rating.html">Рейтинг фильмов</a> </li>
                 <li> <a href="contact.html">Контакты</a> </li>
 
               </ul>
@@ -97,48 +97,60 @@
             </div>
           </form> 
           
-          <h1>Интерстеллар</h1>
+          <h1>Рейтинг фильмов</h1>
           <hr>
 
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/R5KHoE_8dgo?showinfo=0" frameborder="0" allowfullscreen></iframe>
-          </div>
-          <div class="well info-block text-center">
-            Год: <span class="badge">2015</span>
-            Рейтинг: <span class="badge">8.9</span>
-            Режиссер: <span class="badge">Кристофер Нолан</span>
-          </div>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Фильм</th>
+                <th class="text-center">Год</th>
+                <th class="text-center">Рейтинг</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="col-lg-1 col-md-1 col-xs-2">
+                  <img class="img-responsive img-thumbnail" src="assets/img/inter.png" alt="интерстеллар">
+                </td>
+                <td class="vert-align"><a href="show.html">Интерстеллар</a></td>
+                <td class="text-center vert-align">2014</td>
+                <td class="text-center vert-align"><span class="badge">8.1</span></td>
+              </tr>
 
-          <div class="margin-8"></div>
+              <tr>
+                <td class="col-lg-1 col-md-1 col-xs-2">
+                  <img class="img-responsive img-thumbnail" src="assets/img/cloud.png" alt="Облачный атлас">
+                </td>
+                <td class="vert-align"><a href="#">Облачный атлас</a></td>
+                <td class="text-center vert-align">2012</td>
+                <td class="text-center vert-align"><span class="badge">8.0</span></td>
+              </tr>
 
-          <h2>Описание Интерстеллар</h2>
-          <hr>
+              <tr>
+                <td class="col-lg-1 col-md-1 col-xs-2">
+                  <img class="img-responsive img-thumbnail" src="assets/img/matrix.png" alt="Матрица">
+                </td>
+                <td class="vert-align"><a href="#">Матрица</a></td>
+                <td class="text-center vert-align">1999</td>
+                <td class="text-center vert-align"><span class="badge">7.9</span></td>
+              </tr>
 
-          <div class="well">
-            Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
-          </div>
+              <tr>
+                <td class="col-lg-1 col-md-1 col-xs-2">
+                  <img class="img-responsive img-thumbnail" src="assets/img/max.png" alt="Безумный макс">
+                </td>
+                <td class="vert-align"><a href="#">Безумный макс</a></td>
+                <td class="text-center vert-align">2015</td>
+                <td class="text-center vert-align"><span class="badge">7.8</span></td>
+              </tr>
+            </tbody>
 
-          <div class="margin-8"></div>
 
-          <h2>Отзывы об Интерстеллар</h2>
-          <hr>
+          </table>
 
-          <div class="panel panel-info">
-            <div class="panel-heading"><i class="glyphicon glyphicon-user"></i> <span>Сергей</span> </div>
-            <div class="panel-body">
-              Отличный фильм, 3 часа пролетели не заметно.
-            </div>
-          </div>
 
-          <form>
-            <div class="form-group">
-              <input type="text" placeholder="ваше имя" class="form-control input-lg">
-            </div>
-            <div class="form-group">
-              <textarea class="form-control"></textarea>
-            </div>
-            <button class="btn btn-lg btn-warning pull-right">отправить</button>
-          </form>
 
           <div class="margin-8 clear"></div>
 
